# ztofs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
doc/: version_1_analysis.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  echo_client.cpp  file_client.cpp
src/client/benchmark/: simple_benchmark.cpp  write_benchmark.cpp
src/proto/: file_common.proto  file_service.proto
src/server/: CMakeLists.txt  server.cpp
src/server/common/: errorcode.h  file_attr.h  file_handle.h
src/server/meta/: CMakeLists.txt  local_meta.cpp  local_meta.h  meta.h
src/server/meta/test/: CMakeLists.txt  local_meta_test.cpp
src/server/service/: CMakeLists.txt  echo_service.h  file_service_impl.cpp  file_service_impl.h
src/server/service/test/: CMakeLists.txt  file_service_test.cpp
src/server/storage/: CMakeLists.txt  local_storage.cpp  local_storage.h  storage.h
src/server/storage/test/: CMakeLists.txt  local_storage_test.cpp
